# xuanji-cli

./: .gitignore  README.md  pyproject.toml
skills/: SKILL.md
xuanji/: __init__.py  cli.py
xuanji/commands/: analyze.py  config.py  data.py  project.py  report.py  workflow.py
xuanji/core/: analyzer.py  errors.py  llm.py  models.py
xuanji/templates/: __init__.py  briefing.md.j2  opinion-analysis.md.j2  sentiment-dashboard.md.j2
