[project]
name = "xuanji-cli"
version = "0.1.0"
description = "舆情分析工作流 CLI 工具 - 从数据获取到 AI 分析再到报告生成的一站式解决方案"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Zhou Long", email = "your-email@example.com"}
]
keywords = ["cli", "sentiment-analysis", "public-opinion", "ai", "llm", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "tabulate>=0.9",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/xuanji-cli"
Repository = "https://github.com/yourusername/xuanji-cli"
Issues = "https://github.com/yourusername/xuanji-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
xuanji = "xuanji.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xuanji*"]
